Only specify .env.default in Compose config

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,9 +12,7 @@ services:
     ports:
       - 8000:${WEB_APP_PORT}
     profiles: ["full_prod", "slim_prod"]
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
     networks:
       default:
         aliases:
@@ -25,18 +23,14 @@ services:
       service: ${BLAST_IMAGE}
     command: bash entrypoints/docker-entrypoint.celery.sh
     profiles: ["full_prod", "full_dev", "batch"]
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
   celery_beat:
     extends:
       file: docker-compose.blast_base.yml
       service: ${BLAST_IMAGE}
     command: bash entrypoints/docker-entrypoint.celery_beat.sh
     profiles: ["full_prod", "full_dev", "batch"]
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
   rabbitmq:
     restart: always
     image: rabbitmq:3.10.6-management-alpine
@@ -46,18 +40,14 @@ services:
     volumes:
       - ../data/rabbitmq_data:/data
       - ../data/rabbitmq_data/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
     profiles: ["full_prod", "full_dev", "batch"]
   database:
     extends:
       file: docker-compose.blast_base.yml
       service: database_base
     profiles: ["full_prod", "slim_prod", "full_dev", "slim_dev", "batch"]
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
   nginx:
     extends:
       file: docker-compose.blast_base.yml
@@ -83,9 +73,7 @@ services:
     command: bash entrypoints/docker-entrypoint.flower.sh
     ports:
       - "8888:${FLOWER_PORT}"
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
     profiles: ["full_prod", "full_dev", "batch"]
   app_test:
     extends:
@@ -100,9 +88,7 @@ services:
           - app
     environment:
       - "TEST_MODE=1"
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
     profiles: ["test"]
   app_ci:
     extends:
@@ -117,9 +103,7 @@ services:
           - ${WEB_APP_HOST}
     environment:
       - "TEST_MODE=1"
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.ci
+    env_file: ../env/.env.default
     profiles: ["ci"]
   database_test:
     extends:
@@ -143,9 +127,7 @@ services:
     profiles: ["full_dev", "slim_dev", "batch"]
     environment:
       - "DEV_MODE=1"
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
     networks:
       default:
         aliases:
@@ -169,6 +151,4 @@ services:
     profiles: ["batch"]
     command: bash docker-entrypoint.batch.sh
     network_mode: "host"
-    env_file:
-      - ../env/.env.default
-      - ../env/.env.dev
+    env_file: ../env/.env.default
