--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,29 +13,38 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
         with:
-          driver: docker # defaults to "docker-container"
+          # network=host driver-opt needed to push to local registry
+          driver-opts: network=host
 
       - name: Build
         id: docker_build
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./app
           file: ./app/Dockerfile
-          tags: blast:dev
+          tags: localhost:5000/blast:dev
+          push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: docker compose up
         run: |
+          docker pull localhost:5000/blast:dev
+          docker tag localhost:5000/blast:dev blast:dev
           docker compose \
             --profile ci \
             --project-name blast \
