--- a/app/requirements.dev.txt
+++ b/app/requirements.dev.txt
@@ -27,3 +27,13 @@ gunicorn
 scikit-image
 fsps
 coverage
+Sphinx
+sphinx-copybutton
+sphinx-rtd-theme
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+furo
