Only run CI workflow on specific tags until build issue is resolved
GitHub Action is failing with error "no space left on device"

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -5,10 +5,14 @@ on:
     branches: [main]
     paths-ignore:
       - 'docs/**'
+    tags:
+      - ci-test-*
   push:
     branches: [main]
     paths-ignore:
       - 'docs/**'
+    tags:
+      - ci-test-*
 
 jobs:
   build:
