Revert change to env_file in Compose configs

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     ports:
       - 8000:${WEB_APP_PORT}
     profiles: ["full_prod", "slim_prod"]
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     networks:
       default:
         aliases:
@@ -23,14 +25,18 @@ services:
       service: ${BLAST_IMAGE}
     command: bash entrypoints/docker-entrypoint.celery.sh
     profiles: ["full_prod", "full_dev", "batch"]
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   celery_beat:
     extends:
       file: docker-compose.blast_base.yml
       service: ${BLAST_IMAGE}
     command: bash entrypoints/docker-entrypoint.celery_beat.sh
     profiles: ["full_prod", "full_dev", "batch"]
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   rabbitmq:
     restart: always
     image: rabbitmq:3.10.6-management-alpine
@@ -40,14 +46,18 @@ services:
     volumes:
       - ../data/rabbitmq_data:/data
       - ../data/rabbitmq_data/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     profiles: ["full_prod", "full_dev", "batch"]
   database:
     extends:
       file: docker-compose.blast_base.yml
       service: database_base
     profiles: ["full_prod", "slim_prod", "full_dev", "slim_dev", "batch"]
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   nginx:
     extends:
       file: docker-compose.blast_base.yml
@@ -73,7 +83,9 @@ services:
     command: bash entrypoints/docker-entrypoint.flower.sh
     ports:
       - "8888:${FLOWER_PORT}"
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     profiles: ["full_prod", "full_dev", "batch"]
   app_test:
     extends:
@@ -88,7 +100,9 @@ services:
           - app
     environment:
       - "TEST_MODE=1"
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     profiles: ["test"]
   app_ci:
     extends:
@@ -103,7 +117,9 @@ services:
           - ${WEB_APP_HOST}
     environment:
       - "TEST_MODE=1"
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     profiles: ["ci"]
   database_test:
     extends:
@@ -127,7 +143,9 @@ services:
     profiles: ["full_dev", "slim_dev", "batch"]
     environment:
       - "DEV_MODE=1"
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     networks:
       default:
         aliases:
@@ -151,4 +169,6 @@ services:
     profiles: ["batch"]
     command: bash docker-entrypoint.batch.sh
     network_mode: "host"
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
