--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -13,14 +13,18 @@ services:
       - blast-data:/mnt/data
       - django-static:/app/static
       #- ../blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz:/tmp/blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   blast_ci:
     image: blast:dev
     volumes:
       - ./dustmapsrc:/tmp/.dustmapsrc:ro
       - blast-data:/mnt/data
       - django-static:/app/static
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
@@ -29,7 +33,9 @@ services:
       - blast-data:/data
     ports:
       - 80:${WEB_SERVER_PORT}
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   database_base:
     image: mariadb:10
     platform: linux/x86_64
@@ -38,10 +44,14 @@ services:
       - blast-db:/var/lib/mysql/
     ports:
       - 3306:${DATABASE_PORT}
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
   blast_latest:
     image: ghcr.io/astrophpeter/blast:latest
-    env_file: ../env/.env.default
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.dev
     volumes:
       - ../app:/app
       - ./dustmapsrc:/tmp/.dustmapsrc:ro
