--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,11 +17,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,26 +24,30 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          # network=host driver-opt needed to push to local registry
-          driver-opts: network=host
 
-      - name: Build
+      - name: Login to container registry
+        uses: docker/login-action@v3
+        with:
+          registry: "hub.ncsa.illinois.edu"
+          username: "${{ secrets.NCSA_HARBOR_BLAST_USERNAME }}"
+          password: "${{ secrets.NCSA_HARBOR_BLAST_TOKEN }}"
+
+      - name: Build image
         id: docker_build
         uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./app
           file: ./app/Dockerfile
-          tags: localhost:5000/blast:dev
+          tags: hub.ncsa.illinois.edu/blast/blast:ci
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: docker compose up
+      - name: Run tests
         run: |
-          docker pull localhost:5000/blast:dev
-          docker tag localhost:5000/blast:dev blast:dev
+          docker pull hub.ncsa.illinois.edu/blast/blast:ci
+          docker tag hub.ncsa.illinois.edu/blast/blast:ci blast:dev
           touch env/.env.dev
           docker compose \
             --profile ci \
