--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,4 @@
-astro_ghost @ git+https://github.com/manning-ncsa/astro_ghost@9f68b1a343bd645ce0760b4db384fd67e1d2dd25
+astro_ghost==2.1.4
 celery==5.4.0
 Django==5.0.4
 django-silk==5.1.0
@@ -15,7 +15,7 @@ mysqlclient==2.2.4
 dustmaps==1.0.13
 astro-sedpy==0.3.2
 extinction==0.4.6
-astro-prospector @ git+https://github.com/bd-j/prospector.git@2fa085df5c5f5a157b4409f836e39779f157ade6
+astro-prospector==1.3.0
 bokeh==2.4.0
 dynesty==2.1.3
 torch==2.2.2
