--- a/env/.env.default
+++ b/env/.env.default
@@ -61,5 +61,7 @@ DATA_ARCHIVE_FILE = blast-data.v1.tar.gz
 DATA_ARCHIVE_FILE_URL = "https://js2.jetstream-cloud.org:8001/swift/v1/blast-astro-data/${DATA_ARCHIVE_FILE}"
 # If USE_LOCAL_ARCHIVE_FILE is true, the DATA_ARCHIVE_FILE must be mounted in /tmp
 USE_LOCAL_ARCHIVE_FILE = false
+# Set FORCE_INITIALIZATION to remove any stale lock files preventing the initialization from proceeding
+FORCE_INITIALIZATION = false
 
 SILKY_PYTHON_PROFILER = false
