--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -17,6 +17,7 @@ services:
     image: blast:dev
     build:
       context: ../app/
+    command: bash entrypoints/docker-entrypoint.app.sh
     volumes:
       - ../app:/app
       - ./dustmapsrc:/tmp/.dustmapsrc:ro
@@ -36,7 +37,18 @@ services:
       - django-static:/app/static
     env_file:
       - ../env/.env.default
-      - ../env/.env.dev
+      - ../env/.env.ci
+  database_ci:
+    image: mariadb:10
+    platform: linux/x86_64
+    restart: always
+    volumes:
+      - blast-db:/var/lib/mysql/
+    ports:
+      - 3306:${DATABASE_PORT}
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.ci
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
