FORCE_INITIALIZATION should be true by default in local dev deployment

--- a/env/.env.default
+++ b/env/.env.default
@@ -56,7 +56,7 @@ DATA_ARCHIVE_FILE = ""
 DATA_ARCHIVE_FILE_URL = "https://js2.jetstream-cloud.org:8001/swift/v1/blast-astro-data/blast-data.v1.tar.gz"
 USE_LOCAL_ARCHIVE_FILE = false
 # Set FORCE_INITIALIZATION to remove any stale lock files preventing the initialization from proceeding
-FORCE_INITIALIZATION = false
+FORCE_INITIALIZATION = true
 
 DUSTMAPS_DATA_ROOT = "/data/dustmaps"
 CUTOUT_ROOT = "/data/cutout_cdn"
