--- a/env/.env.default
+++ b/env/.env.default
@@ -16,6 +16,7 @@ DJANGO_SUPERUSER_PASSWORD = password
 DJANGO_SUPERUSER_USERNAME = admin
 DJANGO_SUPERUSER_EMAIL = test@example.com
 SILKY_PYTHON_PROFILER = false
+FLOWER_UNAUTHENTICATED_API = false
 
 # RabbitMQ
 RABBITMQ_USERNAME = guest
