Add SILKY_INTERCEPT_PERCENT env var

--- a/env/.env.default
+++ b/env/.env.default
@@ -17,6 +17,7 @@ DJANGO_SUPERUSER_USERNAME = admin
 DJANGO_SUPERUSER_EMAIL = test@example.com
 SILKY_PYTHON_PROFILER = false
 FLOWER_UNAUTHENTICATED_API = false
+SILKY_INTERCEPT_PERCENT = 0
 
 # RabbitMQ
 RABBITMQ_USERNAME = guest
