--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,6 +7,7 @@ django-tables2==2.7.0
 django-bootstrap4==24.3
 crispy-bootstrap4==2024.1
 django-celery-beat==2.6.0
+django-celery-results==2.5.1
 django-revproxy==0.12.0
 djangorestframework==3.15.1
 django-cron==0.6.0
