--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -19,14 +19,12 @@ COPY ./debug/debug_ipython.py /root/.ipython/profile_default/startup/
 COPY --from=deps /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
 COPY --from=deps /usr/local/bin/ /usr/local/bin/
 
+# Temporary solution to install modified astro_ghost package until changes are merged upstream
+RUN git clone https://github.com/manning-ncsa/astro_ghost.git /tmp/blast && cd /tmp/blast && \
+    git checkout c3e9baf7e537a2b2294fbb9763017438e86ee8ef && \
+    pip uninstall --yes astro_ghost && pip install --no-cache-dir . && \
+    cd / && rm -rf /tmp/blast
 
 RUN mkdir /app
-
-COPY astro_ghost/ /app/astro_ghost
-WORKDIR /app/astro_ghost
-RUN pip uninstall --yes astro_ghost && pip install --no-cache-dir .
-
 COPY . /app
-WORKDIR /app
-
 WORKDIR /app
