Add env var CELERY_QUEUES to ensure SED tasks run in Docker Compose

--- a/env/.env.default
+++ b/env/.env.default
@@ -23,6 +23,9 @@ SILKY_INTERCEPT_PERCENT = 0
 RABBITMQ_USERNAME = guest
 RABBITMQ_PASSWORD = guest
 
+# Celery
+CELERY_QUEUES = sed,celery
+
 DATABASE_PORT = 3306
 MESSAGE_BROKER_PORT = 5672
 FLOWER_PORT = 8888
