Update Docker build automation

--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -13,11 +13,13 @@ on:
       - "app"
     tags:
       - "*"
-  # pull_request:
-  #   branches: [main]
-  #   paths:
-  #     - "app/Dockerfile"
-  #     - "app/requirements.txt"
+  pull_request:
+    branches: [main]
+    paths:
+      - "docker/**"
+      - "app/**"
+      - "run/**"
+      - ".github/**"
 
 jobs:
   docker:
