Do not build when opening pull request, only when merged

--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -9,17 +9,15 @@ name: Publish Docker image
 on:
   push:
     branches: [main]
-    paths:
-      - "app"
     tags:
       - "*"
-  pull_request:
-    branches: [main]
     paths:
       - "docker/**"
       - "app/**"
       - "run/**"
       - ".github/**"
+  # pull_request:
+  #   branches: [main]
 
 jobs:
   docker:
