Refactor dependency installation to improve efficiency

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM hub.ncsa.illinois.edu/blast/deps@sha256:06380e323b68bb2670fbfbda089f3d3637b6cea40e750af68b962fd220941a11 AS deps
+FROM hub.ncsa.illinois.edu/blast/deps:20240711 AS deps
 
 FROM python:3.11
 ENV PYTHONUNBUFFERED=1
