--- a/app/Dockerfile.deps
+++ b/app/Dockerfile.deps
@@ -5,4 +5,6 @@ RUN curl https://dl.min.io/client/mc/release/linux-amd64/mc \
     chmod +x /usr/local/bin/mc
 
 COPY ./requirements.txt /requirements.txt
+COPY ./requirements.large.txt /requirements.large.txt
+RUN pip install -r /requirements.large.txt --no-cache-dir
 RUN pip install -r /requirements.txt --no-cache-dir
