--- a/env/.env.default
+++ b/env/.env.default
@@ -25,6 +25,8 @@ RABBITMQ_PASSWORD = guest
 
 # Celery
 CELERY_QUEUES = sed,celery
+CELERY_WORKER_LIMIT_CPUS = '4.0'
+CELERY_WORKER_LIMIT_MEMORY = 4G
 
 DATABASE_PORT = 3306
 MESSAGE_BROKER_PORT = 5672
